[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scene/Characters/Health/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Characters/Health/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Characters/Health/DamageSource.tscn" type="PackedScene" id=3]
[ext_resource path="res://Script/Characters/enemies/Ghost.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="CircleShape2D" id=2]

[node name="Ghost" type="KinematicBody2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Pivot" type="Position2D" parent="."]

[node name="Body" type="Sprite" parent="Pivot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Stats" parent="." instance=ExtResource( 2 )]

[node name="StateMachine" type="Node" parent="."]

[node name="Apear" type="Node" parent="StateMachine"]

[node name="NormalSequence" type="Node" parent="StateMachine"]

[node name="Idle" type="Node" parent="StateMachine/NormalSequence"]

[node name="Wander" type="Node" parent="StateMachine/NormalSequence"]

[node name="ChargeSequence" type="Node" parent="StateMachine"]

[node name="Prepare" type="Node" parent="StateMachine/ChargeSequence"]

[node name="InvisibleMove" type="Node" parent="StateMachine/ChargeSequence"]

[node name="Shriek" type="Node" parent="StateMachine/ChargeSequence"]

[node name="MoveBack" type="Node" parent="StateMachine/ChargeSequence"]

[node name="Vanish" type="Node" parent="StateMachine"]

[node name="HitBox" parent="." instance=ExtResource( 1 )]
collision_layer = 32
collision_mask = 128

[node name="DamageSource" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageSource"]
shape = SubResource( 2 )

[editable path="HitBox"]
